Fr 740 fix header aligned right (#137)
* fix(header-menu): in mobile position center the header menu and fixed

* chore(header-menu): add breakpoint to xs small device

--- a/src/components/MainMenu/scss/index.scss
+++ b/src/components/MainMenu/scss/index.scss
@@ -5,20 +5,27 @@
   background-color: $white;
   display: flex;
   flex-direction: row;
-  margin: 0 auto;
   max-width: 100vw;
-  padding: 12px 40px 12px 32px;
   position: relative;
   width: 1140px;
   z-index: 1;
 
-  @media (max-width: $medium-screen) {
+  @media (min-width: $medium-screen) {
     padding: 12px 19px 12px 3px;
+    margin: 0 auto;
   }
 
   &__left {
     display: flex;
     flex: 1;
+    @media (min-width: $medium-screen) {
+      display: flex;
+      flex: 1;
+      margin-left: 15px;
+    }
+    @media (max-width: $xs-small-screen) {
+      margin-left: -12px;
+    }
 
     ul {
       display: flex;
@@ -28,6 +35,10 @@
 
   &__right {
     flex: 1;
+    margin-right: 10px;
+    @media (min-width: $medium-screen) {
+      margin-right: 0px;
+    }
 
     ul {
       display: flex;
