--- a/src/globalStyles/scss/index.scss
+++ b/src/globalStyles/scss/index.scss
@@ -43,7 +43,7 @@ body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
-
+    overflow: hidden;
     & > div:first-of-type {
       flex: 1;
     }
